@startuml
package com.iluwatar.bindingproperties {
  class App {
    - LOGGER : Logger {static}
    + App()
    + main(args : String[]) {static}
  }
  abstract class BindableField<T> {
    - value : T
    - notifyMap : <BindableField, Function<T, ? extends Object>>>
    + bind(target : BindableField<T>,)
    + bidirectionalBind(target : BindableField<T>)
    + bind<M>(target : BindableField<M>,
    onChangeFunction : Function<T, M>,)
    + bidirectionalBind<M>(target : BindableField<M>,onChangeFunction : Function<T, M>,
    oppositeOnChangeFunction : Function<M, T>)
  }

  class BindableDouble{
    - value : Double
  }

  class BindableInteger{
    - value : Integer
  }

}

BindableDouble --|> BindableField
BindableInteger  --|> BindableField
@enduml